--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+# \uD3EC\uD2B8 \uBC88\uD638 \uC9C0\uC815
+server.port=8082
+
+# maria DB \uC124\uC815
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+# log4j \uC124\uC815 -> \uAE30\uBCF8\uC801\uC73C\uB85C \uC2A4\uD504\uB9C1\uBD80\uD2B8\uB294 log4j \uD0D1\uC7AC, \uB85C\uADF8\uB808\uBCA8\uACFC \uAD00\uB828\uB41C \uD328\uD0A4\uC9C0\uB97C \uC124\uC815\uD558\uB294 \uCF54\uB4DC
+logging.level.org.springframework=info
+logging.level.com.project=debug
