--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.datasource.password=mysql
 # log4j \uC124\uC815 -> \uAE30\uBCF8\uC801\uC73C\uB85C \uC2A4\uD504\uB9C1\uBD80\uD2B8\uB294 log4j \uD0D1\uC7AC, \uB85C\uADF8\uB808\uBCA8\uACFC \uAD00\uB828\uB41C \uD328\uD0A4\uC9C0\uB97C \uC124\uC815\uD558\uB294 \uCF54\uB4DC
 logging.level.org.springframework=info
 logging.level.com.project=debug
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
+
+# \uD0C0\uC784\uB9AC\uD504 \uC124\uC815
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
