--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
+
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.5'
@@ -40,6 +47,8 @@ dependencies {
 
     //DTO 검증을 위해 validate관련 lib
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
+
+
 
 
 
