--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+
+    // queryDsl 스프링부트 2.6 이상버전이라면 다음처럼 추가
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.project'
@@ -48,12 +51,28 @@ dependencies {
     //DTO 검증을 위해 validate관련 lib
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
 
-
-
-
+    // querydsl dependencies
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// script for querydsl
+def querydslDir = "$buildDir/generated/querydsl" // 쿼리DSL을 사용할 경로를 여기서 지정해줘야한다.
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+sourceSets {
+    main.java.srcDir querydslDir
+}
+configurations {
+    querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
