--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,13 @@ dependencies {
     //모델매퍼를 사용
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.0.0'
 
+    // test를 하기위한 롬복 설정
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
     //MyBatis
-    implementation 'org.mybatis:mybatis:3.5.9'
-    implementation 'org.mybatis:mybatis-spring:2.0.7'
+    // implementation 'org.mybatis:mybatis:3.5.9'
+    // implementation 'org.mybatis:mybatis-spring:2.0.7'
 
     //DTO 검증을 위해 validate관련 lib
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
