--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.thymeleaf.cache=false
 # \uD0C0\uC784\uB9AC\uD504 \uC124\uC815
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
+
+# \uC774\uBBF8\uC9C0\uC5D0 \uAD00\uB828\uB41C \uBA40\uD2F0\uD30C\uD2B8 \uC5B4\uCA4C\uAD6C\uAC00 4\uAC00\uC9C0 \uC5C5\uB85C\uB4DC \uD328\uC2A4\uAC00 1\uAC00\uC9C0 \uCD1D 5\uC904\uC774 \uCD94\uAC00\uB41C\uB2E4.
+
+# \uC2A4\uD504\uB9C1 \uC2DC\uD050\uB9AC\uD2F0\uB97C \uC0AC\uC6A9\uD558\uAE30\uC704\uD55C \uB85C\uADF8\uB808\uBCA8 \uCD94\uAC00
+# logging.level.org.springframework.security=trace
