--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,13 @@ spring.thymeleaf.suffix=.html
 
 # \uC774\uBBF8\uC9C0\uC5D0 \uAD00\uB828\uB41C \uBA40\uD2F0\uD30C\uD2B8 \uC5B4\uCA4C\uAD6C\uAC00 4\uAC00\uC9C0 \uC5C5\uB85C\uB4DC \uD328\uC2A4\uAC00 1\uAC00\uC9C0 \uCD1D 5\uC904\uC774 \uCD94\uAC00\uB41C\uB2E4.
 
-# \uC2A4\uD504\uB9C1 \uC2DC\uD050\uB9AC\uD2F0\uB97C \uC0AC\uC6A9\uD558\uAE30\uC704\uD55C \uB85C\uADF8\uB808\uBCA8 \uCD94\uAC00
+# \uC2A4\uD504\uB9C1 \uC2DC\uD050\uB9AC\uD2F0\uB97C \uC0AC\uC6A9\uD558\uAE30\uC704\uD55C \uB85C\uADF8\uB808\uBCA8 \uCD94\uAC00 (\uB0B4\uAC00 \uBCF8 \uD29C\uD1A0\uB9AC\uC5BC\uC5D0\uB294 \uC5C6\uC5C7\uC74C \uBB54\uC9C0 \uC54C\uACE0 \uC4F8\uAC83)
 # logging.level.org.springframework.security=trace
+
+
+# \uC544\uB798\uC640 \uAC19\uC740 \uC791\uC5C5\uC744 \uD130\uBBF8\uB110\uC5D0\uC11C \uB9AC\uC18C\uC2DC\uC2A4\uC758 certs \uD3F4\uB354 \uACBD\uB85C\uC5D0\uC11C \uD588\uACE0 rsa\uC778\uC99D\uC11C\uB97C \uC124\uCE58\uD558\uB294\uAC78\uB85C \uBCF4\uC778\uB2E4.
+
+# \uBCF4\uC548 \uC99D\uC11C\uB97C \uC704\uCE58\uB97C \uCC3E\uC744\uC218\uC788\uB3C4\uB85D \uCD94\uAC00\uAD6C\uC131
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+
