--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     // spring 시큐리티
     // https://www.youtube.com/watch?v=KYNR5js2cXE&ab_channel=DanVega 이 듀토리얼로 JWT구현함
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: '2.5.4'
+    // implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: '2.5.4'
 
 }
 
