--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,6 @@ spring.thymeleaf.suffix=.html
 # \uC544\uB798\uC640 \uAC19\uC740 \uC791\uC5C5\uC744 \uD130\uBBF8\uB110\uC5D0\uC11C \uB9AC\uC18C\uC2DC\uC2A4\uC758 certs \uD3F4\uB354 \uACBD\uB85C\uC5D0\uC11C \uD588\uACE0 rsa\uC778\uC99D\uC11C\uB97C \uC124\uCE58\uD558\uB294\uAC78\uB85C \uBCF4\uC778\uB2E4.
 
 # \uBCF4\uC548 \uC99D\uC11C\uB97C \uC704\uCE58\uB97C \uCC3E\uC744\uC218\uC788\uB3C4\uB85D \uCD94\uAC00\uAD6C\uC131
-rsa.private-key=classpath:certs/private.pem
-rsa.public-key=classpath:certs/public.pem
+# rsa.private-key=classpath:certs/private.pem
+# rsa.public-key=classpath:certs/public.pem
 
